src/objects/Test_Case__c.object
<CustomObject>
    <description>This object is created to create test case records for each ticket as a part of testing the Ticket Changes</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is created to store the additional comments on this test case</description>
        <inlineHelpText>Please add any additional comments here</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <inlineHelpText>The results that expected.  Enter up to 255 characters.</inlineHelpText>
        <label>Expected Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Description__c</fullName>
        <description>This field is created to store the detailed description of a test case</description>
        <label>Test Case Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Case_Results__c</fullName>
        <description>This field is created to store the detailed Test case Results</description>
        <label>Test Case Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Case_Summary__c</fullName>
        <description>This field is created to store the Test Case Summary</description>
        <label>Test Case Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Due_Date__c</fullName>
        <description>This field is created to capture the due date on this test case record</description>
        <label>Test Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Environment__c</fullName>
        <inlineHelpText>This field is to show where the deliverable is being testing.  IT will perform testing in Unit, which is the development environment.  UAT is for extensive and full integration tests.</inlineHelpText>
        <label>Test Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Status__c</fullName>
        <description>This field is created to track the testing status</description>
        <inlineHelpText>Please select the respective testing result status</inlineHelpText>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Summary__c</fullName>
        <formula>Ticket__r.Summary__c</formula>
        <label>Ticket Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This relationship is established to create the multiple test cases t o a ticket for user testing</description>
        <inlineHelpText>Please select the related ticket</inlineHelpText>
        <label>Ticket</label>
        <referenceTo>Tickets__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to select the respective testing user for the test case</description>
        <inlineHelpText>Please select the respective testing user</inlineHelpText>
        <label>Testing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>